--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -12,7 +12,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    if: startsWith(github.ref, 'refs/tags')
+    if: true
+    # startsWith(github.ref, 'refs/tags')
     steps:
       - name: Extract Version
         id: version_step
